# nyx-modules-hybris

./: CMakeLists.txt  README.md
include/internal/: msgid.h
src/: CMakeLists.txt
src/device_info/: CMakeLists.txt  device_info.c
src/haptics/: CMakeLists.txt  haptics.c
src/led_controller/: CMakeLists.txt  led_controller.c
src/system/: CMakeLists.txt  alarm.c  alarm.h  android_alarm.h  power_key_resume_handler.c  resume_handler.h  rtc.c  suspend.c  suspend.h  system.c
